# financial-document-Analyzer

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  README_NEW.md  SETUP.md  docker-compose.yaml  hackathon_start.sh  pyproject.toml  requirements.txt  setup.sh
app/: __init__.py  main.py  worker.py
app/api/: __init__.py  deps.py  ingest.py  organizations.py  schemas.py  templates.py  users.py
app/core/: __init__.py  config.py  factory.py  logging_config.py
app/db/: __init__.py  models.py  session.py
app/interfaces/: __init__.py  chunker.py  embedder.py  logic_extractor.py  parser.py  template.py  vector_store.py
app/models/: __init__.py
app/strategies/: __init__.py
app/strategies/chunkers/: __init__.py  markdown.py  recursive.py
app/strategies/embedders/: __init__.py  openai.py
app/strategies/parsers/: __init__.py  llama_parse.py  simple.py
app/strategies/template_engine/: __init__.py  analyzer.py  injector.py  models.py
app/strategies/vector_stores/: __init__.py  qdrant.py
frontend/: __init__.py  app.py  template_ui.py
notebooks/: attemp2.ipynb  attempt1.ipynb
notebooks/output/: suitability_report_analysis (2).json
scripts/: fix_schema.py  init_db.py  reset_db.py
tests/: __init__.py
tests/unit/: test_logic_extractor.py
