[tool.poetry]
name = "doc-intelligence-platform"
version = "0.1.0"
description = "Document Intelligence Platform for UK Financial Advisory"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
sqlmodel = "^0.0.22"
asyncpg = "^0.30.0"
greenlet = "^3.0.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.2.0"
qdrant-client = "^1.12.0"

# --- LlamaIndex Stack (Synchronized) ---
# Bump core and main package to 0.14.x to satisfy llama-parse requirements
llama-index = "^0.14.0"
llama-index-core = "^0.14.0"

# Use specific version for the reader that supports core 0.14+
llama-index-readers-llama-parse = "^0.5.1" 

# Allow these to float to compatible versions automatically
llama-index-llms-openai = "*"
llama-index-embeddings-openai = "*"

python-multipart = "^0.0.12"
aiofiles = "^24.1.0"
httpx = "^0.27.0"
structlog = "^24.4.0"
openai = "^1.57.0"
python-dotenv = "^1.0.0"
email-validator = "^2.0.0"
bcrypt = "^5.0.0"
python-docx = "^1.2.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.0"
black = "^24.10.0"
mypy = "^1.13.0"
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
streamlit = "^1.40.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "B"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ['py311']

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
